# Ion_readout

./: .gitignore  Ablation_eval.py  CONTRIBUTING.md  LICENSE  README.md  REPRODUCIBILITY.md  Testset_eval.py  config.py  convert_slice_data_to_png.py  dataset.py  generate_mask_proposals.py  loss.py  pyproject.toml  requirements.txt  train_main.py  train_retrained_ablation.py  trainer.py
Pre_train/: dataset.py  main_train.py  model_denoise.py
nets/: DWNetV2.py  DWNetV2_unet.py  ImgWrapNet.py  SETR.py  SegFormer.py  Segmenter.py  StandardUNet.py  ViTUNet.py  site_dia.py
